<resources>
    <string name="app_name">ChildTracker</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="base_url_phpfiles">http://medicalapp.site88.net/ChildTracker/</string>
    <string name="google_map_key">AIzaSyAmh73TSSUl_U3NrnuCn_OopQeV_CK5yI0</string>
    <string name="btn_splash_login">Login</string>
    <string name="btn_splash_signup">Register</string>
    <string name="btn_splash_register">Register</string>
    <string name="etxt_deliveryorder_password">Password</string>
    <string name="etxt_login_mail">E-Mail</string>
    <string name="etxt_login_password">Password</string>
    <string name="etxt_Register_name">Name</string>
    <string name="etxt_Register_mail">E-Mail</string>
    <string name="etxt_Register_password">Password</string>
    <string name="btn_register_register">Register</string>
    <string name="btn_login_login">Login</string>
    <string name="navigation_item_map">Map</string>
    <string name="navigation_item_places">Places</string>
    <string name="navigation_item_joinmember">Join A Parent</string>
    <string name="navigation_item_invitefriend">Invite A Friend</string>
    <string name="action_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="txt_popup_title">Join Parent by ID</string>
    <string name="txt_popup_description">Enter the parent ID, which can found under the user name in the navigation menu</string>
    <string name="txt_popup_parentid">Parent ID</string>
    <string name="btn_popup_cancel">Cancel</string>
    <string name="btn_popup_join">Join</string>
    <string name="txt_places_nodata">No Places Added Yet</string>
    <string name="btn_places_addplace">Pick A Place</string>
    <string name="etxt_places2_searchhint">Address...</string>
    <string name="autocomplete_place2_hint">Enter The Address</string>
    <string name="btn_places2_addgeofence">Add This Place</string>


    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/navigation_item_map</item>
        <item>@string/navigation_item_places</item>
        <item>@string/navigation_item_joinmember</item>
        <item>@string/navigation_item_invitefriend</item>
    </string-array>

    <integer-array name="nav_drawer_icons">
        <item>@drawable/map</item>
        <item>@drawable/places</item>
        <item>@drawable/joinmember</item>
        <item>@drawable/addfriend</item>
    </integer-array>
</resources>
