<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_map"
            android:checked="true"
            android:icon="@drawable/map"
            android:title="@string/navigation_item_map" />
        <item
            android:id="@+id/navigation_item_places"
            android:icon="@drawable/places"
            android:title="@string/navigation_item_places" />
        <item
            android:id="@+id/navigation_item_joinmember"
            android:icon="@drawable/joinmember"
            android:title="@string/navigation_item_joinmember" />
        <item
            android:id="@+id/navigation_item_invitefriend"
            android:icon="@drawable/addfriend"
            android:title="@string/navigation_item_invitefriend" />
    </group>

</menu>