<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layout_margin="15dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_popup_title"
        android:text="@string/txt_popup_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_popup_description"
        android:text="@string/txt_popup_description"
        android:layout_marginTop="15dp"
        android:textStyle="normal"
        android:textSize="13dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txt_popup_parentid"
        android:text="@string/txt_popup_parentid"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_popup_parentid"
        android:ems="8"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:inputType="number"
        android:layout_gravity="center"
        android:digits="0123456789"
        />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_popup_join"
            android:text="@string/btn_popup_join"
            android:layout_marginTop="100dp"
            android:background="@color/Cyan"
            android:textColor="@color/white"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:textSize="15sp"
            android:layout_gravity="center"
            />


</LinearLayout>