<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    tools:context="nanodegree.mal.udacity.android.childtracker.RegisterActivity">

<LinearLayout
    android:id="@+id/activity_Register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_blue"
    >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/icon"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Track your Child"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="30dp"
        />

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="50dp"
        android:alpha=".5"
        android:layout_above="@+id/linearlayout_splash_layoutDots"
        android:background="@android:color/white"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/name"
            android:id="@+id/img_Register_name"
            android:layout_gravity="left|center_vertical"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/etxt_Register_name"
            android:ems="17"
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:textSize="12sp"
            android:textColorHint="@color/hint"
            android:hint="@string/etxt_Register_name"/>
        <requestFocus/>
    </LinearLayout>

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha=".5"
        android:layout_above="@+id/linearlayout_splash_layoutDots"
        android:background="@android:color/white"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/mail"
            android:id="@+id/img_Register_mail"
            android:layout_gravity="left|center_vertical"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/etxt_Register_mail"
            android:ems="17"
            android:layout_marginLeft="30dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:textSize="12sp"
            android:textColorHint="@color/hint"
            android:hint="@string/etxt_Register_mail"/>
        <requestFocus/>
    </LinearLayout>

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha=".5"
        android:layout_above="@+id/linearlayout_splash_layoutDots"
        android:background="@android:color/white"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center"
        >
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/password"
            android:id="@+id/img_Register_password"
            android:layout_gravity="left|center_vertical"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/etxt_Register_password"
            android:ems="17"
            android:layout_marginLeft="30dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:gravity="left|center_vertical"
            android:textSize="12sp"
            android:hint="@string/etxt_Register_password"
            android:textColorHint="@color/hint"/>
        <requestFocus/>
    </LinearLayout>

    <View
        android:layout_width="260dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:alpha=".5"
        android:layout_above="@+id/linearlayout_splash_layoutDots"
        android:background="@android:color/white"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@color/Cyan"
        android:text="@string/btn_register_register"
        android:textColor="@color/white"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textSize="15sp"
        android:id="@+id/btn_register_register"/>

</LinearLayout>
</ScrollView>